tests/snapshots/template_tests__constant_with_type.snap
---
source: tests/template_tests.rs
expression: output
---
export const FHIR_VERSION: string = "4.0.1";
