tests/snapshots/template_tests__imports.snap
---
source: tests/template_tests.rs
expression: output
---
import { Patient, Observation } from './resources';
import { HumanName, Address } from './datatypes';
