tests/snapshots/template_tests__index_file.snap
---
source: tests/template_tests.rs
expression: output
---
export * from './Patient';
export * from './Observation';
export * from './Practitioner';
