tests/snapshots/template_tests__interface_simple.snap
---
source: tests/template_tests.rs
expression: output
---
export interface User {
  id?: string;
  name: string;
}
