tests/snapshots/template_tests__interface_with_extends.snap
---
source: tests/template_tests.rs
expression: output
---
/**
 * Patient resource
 */
export interface Patient extends DomainResource {
  resourceType: "Patient";
  id?: string;
  active?: boolean;
}
