tests/snapshots/template_tests__type_alias_simple.snap
---
source: tests/template_tests.rs
expression: output
---
export type Status = "active" | "inactive";
