tests/snapshots/template_tests__type_alias_with_doc.snap
---
source: tests/template_tests.rs
expression: output
---
/**
 * Patient gender
 * 
 * Administrative gender code
 */
export type AdministrativeGender = "male" | "female" | "other" | "unknown";
